Removed duplicate jvmargs